--- a/specs/acknowledgments.tex
+++ b/specs/acknowledgments.tex
@@ -15,9 +15,10 @@ interests through the whole process.
 
 The attendees of the CLIM coalition meetings and those who contributed to CLIM
 along the way include all of those listed on the title page, but also include
-Bob Kerns, Chris Richardson and John Irwin, Paul Weineke and JonL White, and
-Kevin Males.  Other contributors include Mike McMahon, Paul Robertson, John
-Hotchkiss, Dave Lowry, Mike Greenwald, Dave Schatsky, and Glenn Adams.
+Bob Kerns, John Irwin, Paul Weineke and JonL White, and Kevin Males.  Other
+contributors include Mike McMahon, Paul Robertson, John Hotchkiss, Dave Lowry,
+Mike Greenwald, Dave Schatsky, and Glenn Adams.  Barry Margolin and Richard
+Billington, acting for the ALU, contributed useful comments as well.
 
 Sonya Keene, Ann Hathaway, and Ellen Golden all deserve credit for improving
 the quality of this specification (in part by authoring the original CLIM
