--- a/specs/bboxes.tex
+++ b/specs/bboxes.tex
@@ -68,7 +68,7 @@ mutable objects as sheets and output records, bounding rectangles are volatile.
 Therefore, programmers must not depend on the bounding rectangle associated with
 a mutable object remaining constant.
 
-\Defun {bounding-rectangle-p} {object}
+\Defpredicate {bounding-rectangle-p} {object}
 
 Returns \term{true} if \arg{object} is a \term{bounding rectangle} (that is,
 supports the bounding rectangle protocol), otherwise returns \term{false}.
