--- a/specs/clim.tex
+++ b/specs/clim.tex
@@ -4,21 +4,22 @@
 \pagestyle{headings}
 
 \title{Common Lisp Interface Manager \\
-       Release 2.0 Specification}
+       CLIM II Specification}
 
-\author{Scott McKay ({\tentt SWM@Riverside.SCRC.Symbolics.COM}) \\
-        William York ({\tentt York@Fuji.ILA.COM}) \\ 
+\author{Scott McKay ({\tentt SWM@Symbolics.COM}) \\
+        William York ({\tentt York@Lucid.COM}) \\ 
         {\tenit with contributions by} \\
-        {\tenrm John Aspinall ({\tentt JGA@Riverside.SCRC.Symbolics.COM})} \\
+        {\tenrm John Aspinall ({\tentt JGA@Symbolics.COM})} \\
         {\tenrm Dennis Doughty ({\tentt Doughty@ILeaf.COM})} \\
-        {\tenrm Charles Hornig ({\tentt Hornig@Riverside.SCRC.Symbolics.COM})} \\
+        {\tenrm Charles Hornig ({\tentt Hornig@ODI.COM})} \\
         {\tenrm Richard Lamson ({\tentt RLamson\%UMAB.BitNet@MITVMA.MIT.EDU})} \\
         {\tenrm David Linden ({\tentt Linden@CRL.DEC.COM})} \\
         {\tenrm David Moon ({\tentt Moon@Cambridge.Apple.COM})} \\
-        {\tenrm Ramana Rao ({\tentt rao@PARC.Xerox.COM})}}
+        {\tenrm Ramana Rao ({\tentt rao@PARC.Xerox.COM})} \\
+        {\tenrm Chris Richardson ({\tentt cer@Franz.COM})}}
 
 \date{\today}
-\markright{CLIM 2.0 Specification}
+\markright{CLIM II Specification}
 
 \makeindex
 
@@ -100,8 +101,9 @@
 \appendix
 \input{glossary.tex}
 \input{clim-sys.tex}
-\input{gray-streams.tex}
 \input{encapsulating-streams.tex}
+\input{gray-streams.tex}
+\input{extensions.tex}
 \input{changes.tex}
 
 \end{document}
