--- a/specs/colors.tex
+++ b/specs/colors.tex
@@ -25,7 +25,7 @@ Chapter~\ref{graphics}, can take as its value:
 \begin{itemize}
 \item a color,
 
-\item an opacity,
+\item an opacity or the constant \cl{+transparent-ink+},
 
 \item the constant \cl{+foreground-ink+},
 
@@ -48,7 +48,7 @@ The \cl{:ink} drawing option is a design that specifies a new arrangement of
 colors (and opacities) in this region of the medium's drawing plane.  Any
 viewports or dataports attached to this drawing plane are updated accordingly.
 The \cl{:ink} drawing option is never affected by the \cl{:transformation}
-drawing option nor by the sheet transformation; this ensures that stipple
+drawing option nor by the medium's transformation; this ensures that stipple
 patterns on adjacent sheets join seamlessly.
 
 \issue {DCPL} {The description of how the clipping region and transformations
@@ -115,7 +115,7 @@ design.  This is done by drawing with \cl{(compose-in} \cl{+foreground-ink+}
 the-colorless-design\cl{)}.  See Chapter~\ref{designs} for the details of
 \cl{compose-in}.
 
-\Defun {designp} {object}
+\Defpredicate {designp} {object}
 
 Returns \term{true} if \arg{object} is a \term{design}, otherwise returns
 \term{false}.
@@ -141,7 +141,7 @@ mean white.  The intensity-hue-saturation color model is also supported, but the
 red-green-blue color model is the primary model we will use in the
 specification.
 
-\Defun {colorp} {object}
+\Defpredicate {colorp} {object}
 
 Returns \term{true} if \arg{object} is a \term{color}, otherwise returns
 \term{false}.
@@ -197,12 +197,13 @@ between 0 andn $\sqrt{3}$ (inclusive).  The second and third values are real
 numbers between 0 and 1 (inclusive).
 
 
-\subsection {Standard Color Names}
+\subsection {Standard Color Names and Constants}
 
-Table~\ref{color-names} lists all the provided color constants.  Application
-programs can define other colors; these are provided because they are commonly
-used in the X Windows community, not because there is anything special about
-these particular colors.  This table is a subset of the color listed in the file
+Table~\ref{color-names} lists the commonly provided color names that can be
+looked up with \cl{find-named-color}.  Application programs can define other
+colors; these are provided because they are commonly used in the X Windows
+community, not because there is anything special about these particular colors.
+This table is a subset of the color listed in the file
 \cl{/X11/R4/mit/rgb/rgb.txt}, from the X11 R4 distribution.
 
 \begin{table}
@@ -210,54 +211,68 @@ these particular colors.  This table is a subset of the color listed in the file
 \vspace{1pc}
 \cl{
 \begin{tabular}{lllll}
-+alice-blue+ & +antique-white+ & +aquamarine+ \\
-+azure+ & +beige+ & +bisque+ \\
-+black+ & +blanched-almond+ & +blue+ \\
-+blue-violet+ & +brown+ & +burlywood+ \\
-+cadet-blue+ & +chartreuse+ & +chocolate+ \\
-+coral+ & +cornflower-blue+ & +cornsilk+ \\
-+cyan+ & +dark-goldenrod+ & +dark-green+ \\
-+dark-khaki+ & +dark-olive-green+ & +dark-orange+ \\
-+dark-orchid+ & +dark-salmon+ & +dark-sea-green+ \\
-+dark-slate-blue+ & +dark-slate-gray+ & +dark-turquoise+ \\
-+dark-violet+ & +deep-pink+ & +deep-sky-blue+ \\
-+dim-gray+ & +dodger-blue+ & +firebrick+ \\
-+floral-white+ & +forest-green+ & +gainsboro+ \\
-+ghost-white+ & +gold+ & +goldenrod+ \\
-+gray+ & +green+ & +green-yellow+ \\
-+honeydew+ & +hot-pink+ & +indian-red+ \\
-+ivory+ & +khaki+ & +lavender+ \\
-+lavender-blush+ & +lawn-green+ & +lemon-chiffon+ \\
-+light-blue+ & +light-coral+ & +light-cyan+ \\
-+light-goldenrod+ & +light-goldenrod-yellow+ & +light-gray+ \\
-+light-pink+ & +light-salmon+ & +light-sea-green+ \\
-+light-sky-blue+ & +light-slate-blue+ & +light-slate-gray+ \\
-+light-steel-blue+ & +light-yellow+ & +lime-green+ \\
-+linen+ & +magenta+ & +maroon+ \\
-+medium-aquamarine+ & +medium-blue+ & +medium-orchid+ \\
-+medium-purple+ & +medium-sea-green+ & +medium-slate-blue+ \\
-+medium-spring-green+ & +medium-turquoise+ & +medium-violet-red+ \\
-+midnight-blue+ & +mint-cream+ & +misty-rose+ \\
-+moccasin+ & +navajo-white+ & +navy-blue+ \\
-+old-lace+ & +olive-drab+ & +orange+ \\
-+orange-red+ & +orchid+ & +pale-goldenrod+ \\
-+pale-green+ & +pale-turquoise+ & +pale-violet-red+ \\
-+papaya-whip+ & +peach-puff+ & +peru+ \\
-+pink+ & +plum+ & +powder-blue+ \\
-+purple+ & +red+ & +rosy-brown+ \\
-+royal-blue+ & +saddle-brown+ & +salmon+ \\
-+sandy-brown+ & +sea-green+ & +seashell+ \\
-+sienna+ & +sky-blue+ & +slate-blue+ \\
-+slate-gray+ & +snow+ & +spring-green+ \\
-+steel-blue+ & +tan+ & +thistle+ \\
-+tomato+ & +turquoise+ & +violet+ \\
-+violet-red+ & +wheat+ & +white+ \\
-+white-smoke+ & +yellow+ & +yellow-green+ \\
+alice-blue & antique-white & aquamarine \\
+azure & beige & bisque \\
+black & blanched-almond & blue \\
+blue-violet & brown & burlywood \\
+cadet-blue & chartreuse & chocolate \\
+coral & cornflower-blue & cornsilk \\
+cyan & dark-goldenrod & dark-green \\
+dark-khaki & dark-olive-green & dark-orange \\
+dark-orchid & dark-salmon & dark-sea-green \\
+dark-slate-blue & dark-slate-gray & dark-turquoise \\
+dark-violet & deep-pink & deep-sky-blue \\
+dim-gray & dodger-blue & firebrick \\
+floral-white & forest-green & gainsboro \\
+ghost-white & gold & goldenrod \\
+gray & green & green-yellow \\
+honeydew & hot-pink & indian-red \\
+ivory & khaki & lavender \\
+lavender-blush & lawn-green & lemon-chiffon \\
+light-blue & light-coral & light-cyan \\
+light-goldenrod & light-goldenrod-yellow & light-gray \\
+light-pink & light-salmon & light-sea-green \\
+light-sky-blue & light-slate-blue & light-slate-gray \\
+light-steel-blue & light-yellow & lime-green \\
+linen & magenta & maroon \\
+medium-aquamarine & medium-blue & medium-orchid \\
+medium-purple & medium-sea-green & medium-slate-blue \\
+medium-spring-green & medium-turquoise & medium-violet-red \\
+midnight-blue & mint-cream & misty-rose \\
+moccasin & navajo-white & navy-blue \\
+old-lace & olive-drab & orange \\
+orange-red & orchid & pale-goldenrod \\
+pale-green & pale-turquoise & pale-violet-red \\
+papaya-whip & peach-puff & peru \\
+pink & plum & powder-blue \\
+purple & red & rosy-brown \\
+royal-blue & saddle-brown & salmon \\
+sandy-brown & sea-green & seashell \\
+sienna & sky-blue & slate-blue \\
+slate-gray & snow & spring-green \\
+steel-blue & tan & thistle \\
+tomato & turquoise & violet \\
+violet-red & wheat & white \\
+white-smoke & yellow & yellow-green \\
 \end{tabular}}
 \caption{\label{color-names} Standard color names.}
 \vspace{1pc}
 \hrule
 \end{table}
+
+In addition, the following color constants are provided.
+
+\defconst {+red+}
+\defconst {+green+}
+\defconst {+blue+}
+\defconst {+cyan+}
+\defconst {+magenta+}
+\defconst {+yellow+}
+\defconst {+black+}
+\Defconst {+white+}
+
+Constants corresponding to the usual definitions of red, green, blue, cyan,
+magenta, yellow, black, and white.
 
 
 \subsection {Contrasting Colors}
@@ -321,7 +336,7 @@ implementation might implement color blending and unsaturated colors by
 stippling, although it is preferred, when possible, for a viewport to display a
 uniform color as a uniform color rather than as a perceptible stipple.
 
-\Defun {opacityp} {object}
+\Defpredicate {opacityp} {object}
 
 Returns \term{true} if \arg{object} is an \term{opacity}, otherwise returns
 \term{false}.
@@ -334,6 +349,11 @@ The following function returns an opacity:
 Returns a member of class \cl{opacity} whose opacity is \arg{value}, which is a
 real number in the range from 0 to 1 (inclusive), where 0 is fully transparent
 and 1 is fully opaque.
+
+\Defconst {+transparent-ink+}
+
+An fully transparent ink, that is, an opacity whose value is 0.  This is
+typically used as the ``background'' ink in a call to \cl{make-pattern}.
 
 
 The following function returns the sole component of an opacity.  This is the
