--- a/specs/dialogs.tex
+++ b/specs/dialogs.tex
@@ -10,9 +10,12 @@ by the host?}
 
 
 \Defmacro {accepting-values} {(\optional stream
-                               \key own-window exit-boxes initially-select-query-identifier
-                                    resynchronize-every-pass
-                                    label x-position y-position frame-class)
+                               \key own-window exit-boxes 
+                                    initially-select-query-identifier modify-initial-query
+                                    resynchronize-every-pass resize-frame
+                                    align-prompts label scroll-bars 
+                                    x-position y-position width height
+                                    command-table frame-class)
                               \body body}
 
 Builds a dialog for user interaction based on calls to \cl{accept} within
@@ -25,25 +28,32 @@ whatever values the body returns.  If ``abort'' is selected,
 \arg{stream} is an interactive stream that \cl{accepting-values} will use to
 build up the dialog.  The \arg{stream} argument is not evaluated, and must be a
 symbol that is bound to a stream.  If \arg{stream} is \cl{t} (the default),
-\cl{*query-io*} is used.
+\cl{*standard-input*} is used.
 
 \arg{body} is the body of the dialog, which contains calls to \cl{accept} that
 will be intercepted by \cl{accepting-values} and used to build up the dialog.
 \arg{body} may have zero or more declarations as its first forms.
 
-An \cl{accepting-values} dialog is implemented as a looping structure.  First,
-\arg{body} is evaluated in order to collect the output.  While the body is being
-evaluated, all calls to \cl{accept} call the \cl{accept-present-default}
-presentation methods instead of calling the \cl{accept} presentation methods.
-The output is then displayed (preferably using incremental redisplay in order to
-avoid unnecessary redisplay of unchanged output).  Then \cl{accepting-values}
-awaits a user gesture, such as clicking on one of the fields of the dialog.
-When the user clicks on a field, \cl{accepting-values} reads a new value for
-that field using \cl{accept} and replaces the old value with the new value.
-Then the loop is started again, until the user either exits or aborts from the
-dialog.
+An \cl{accepting-values} dialog is implemented as an application frame with a
+looping structure.  First, \arg{body} is evaluated in order to collect the
+output.  While the body is being evaluated, all calls to \cl{accept} call the
+\cl{accept-present-default} presentation methods instead of calling the
+\cl{accept} presentation methods.  The output is then displayed, preferably
+using incremental redisplay in order to avoid unnecessary redisplay of unchanged
+output.  If \arg{align-prompts} is \term{true} (the default is \cl{nil}), then
+the fields of the dialog will be displayed within a call to
+\cl{formatting-table} so that the prompts are aligned vertically on their
+right-hand sides and the input fields are aligned on their left-hand sides.
+This option is intended to support toolkits where users expect dialogs to have
+this sort of layout.
 
-Because of this looping structure, \cl{accepting-values} needs to be able to
+After \cl{accepting-values} has displayed all of the fields, it awaits a user
+gesture, such as clicking on one of the fields of the dialog.  When the user
+clicks on a field, \cl{accepting-values} reads a new value for that field using
+\cl{accept} and replaces the old value with the new value.  Then the loop is
+started again, until the user either exits or aborts from the dialog.
+
+Because of its looping structure, \cl{accepting-values} needs to be able to
 uniquely identify each call to \cl{accept} in the body of the dialog.  The
 \concept{query identifier} is used to identify the calls to \cl{accept}.  The
 query identifier for a call to \cl{accept} is computed on each loop through the
@@ -67,6 +77,13 @@ output record for the field that used the query identifier, and the output
 record for each field in the dialog will probably need a mapping back to the
 query identifier.  A mediating object (a ``query object'') is also useful, for
 instance, as a place to store the ``changed-p'' flag.
+
+The class of the application frame created by \cl{accepting-values} will be
+\cl{accept-values} or a subclass of \cl{accept-values}.  Programmers can use a
+class of their own by supplying the name of a class via the \arg{frame-class}
+argument.  CLIM will use the command table \cl{accept-values} as the command
+table for \cl{accepting-values}.  Programmers can supply a command table of their
+own by supplying the \arg{command-table} argument.
 
 When \arg{own-window} is non-\cl{nil}, the dialog will appear in its own
 ``popped-up'' window.  In this case the initial value of \arg{stream} is a
@@ -112,7 +129,9 @@ dialog should be pre-selected when the user interaction begins. The field to be
 selected is tagged by the \cl{:query-identifier} option to \cl{accept}.  When
 the initial display is output, the input editor cursor appears after the prompt
 of the tagged field, just as if the user had selected that field by clicking on
-it. The default value, if any, for the selected field is not displayed.
+it.  The default value, if any, for the selected field is not displayed.  When
+\arg{modify-initial-query} is \term{true}, the initially selected field is
+selected for modification rather than for replacement; the default is \cl{nil}.
 
 \arg{resynchronize-every-pass} is a boolean option specifying whether earlier
 queries depend on later values; the default is \term{false}.  When it is
@@ -121,8 +140,12 @@ each user interaction.  This has the effect of ensuring that, when the value of
 some field of a dialog depends on the value of another field, all of the
 displayed fields will be up to date.
 
+When \arg{resize-frame} is \term{true}, own-window dialogs will be resized after
+each pass through the redisplay loop.  The default is \cl{nil}.
+
 \arg{label} is as for \cl{menu-choose}.  \arg{x-position} and \arg{y-position}
-are as for \cl{menu-choose-from-drawer}.
+are as for \cl{menu-choose-from-drawer}.  \arg{width} and \arg{height} are real
+numbers that specify the initial width and height of own-window dialogs.
 
 
 \Defframe {accept-values}
@@ -163,8 +186,8 @@ to \cl{invoke-accept-values-command-button}, supplying a function that executes
 \arg{body} as the \arg{continuation} argument to \cl{accept-values-command-button}.
 
 The \arg{stream} argument is not evaluated, and must be a symbol that is bound
-to a stream.  If \arg{stream} is \cl{t} (the default), \cl{*query-io*} is used.
-\arg{body} may have zero or more declarations as its first forms.
+to a stream.  If \arg{stream} is \cl{t} (the default), \cl{*standard-input*} is
+used.  \arg{body} may have zero or more declarations as its first forms.
 
 \Defmethod {invoke-accept-values-command-button}
            {stream continuation view prompt
