--- a/specs/input-editing.tex
+++ b/specs/input-editing.tex
@@ -113,8 +113,9 @@ operation.
 When the user requests an input editor deletion command, the sequence of gesture
 objects at $IP$ are removed, and $IP$ and $FP$ must be modified to reflect the
 new state of the input buffer.  Deletion commands (and other commands that
-modify the input buffer) must call \cl{immediate-rescan} when they are done
-modifying the buffer.
+modify the input buffer) must arrange for a rescan to occur when they are done
+modifying the buffer, either by calling \cl{queue-rescan} or
+\cl{immediate-rescan}.
 
 CLIM implementations are free to put special objects in the input editor buffer,
 such as ``noise strings'' and ``accept results''.  A ``noise string'' is used to
@@ -128,7 +129,7 @@ skipped over by input editing commands, and accept results are treated as a
 single gesture.
 
 
-\Defgeneric {interactive-stream-p} {object}
+\Defpredicate {interactive-stream-p} {object}
 
 Returns \term{true} if \arg{object} is an interactive stream, that is, a
 bidrectional stream intended for user interactions.  Otherwise it returns
@@ -142,7 +143,7 @@ The input editor need only be fully implemented for interactive streams.
 The protocol class that corresponds to an input editing stream.
 \IfYouWantClass {an} {input editing stream} {input-editing-stream}
 
-\Defun {input-editing-stream-p} {object}
+\Defpredicate {input-editing-stream-p} {object}
 
 Returns \term{true} if \arg{object} is an \term{input editing stream} (that is,
 a stream of the sort created by a call to \cl{with-input-editing}), otherwise
@@ -150,14 +151,14 @@ returns \term{false}.
 
 \Defclass {standard-input-editing-stream}
 
-The class that implements CLIM's standard input editor.  This is the class of
-stream created by calling \cl{with-input-editing}.
+The instantiable class that implements CLIM's standard input editor.  This is
+the class of stream created by calling \cl{with-input-editing}.
 
 \Mutable
 
 
 \Defmacro {with-input-editing} {(\optional stream 
-                                 \key input-sensitizer initial-contents)
+                                 \key input-sensitizer initial-contents class)
                                 \body body}
 
 Establishes a context in which the user can edit the input typed in on the
@@ -167,9 +168,9 @@ and the values returned by \arg{body} are returned as the values of
 first forms.
 
 The \arg{stream} argument is not evaluated, and must be a symbol that is bound
-to an input stream.  If \arg{stream} is \cl{t} (the default), \cl{*query-io*} is
-used.  If \arg{stream} is a stream that is not an interactive stream, then
-\cl{with-input-editing} is equivalent to \cl{progn}.
+to an input stream.  If \arg{stream} is \cl{t} (the default),
+\cl{*standard-input*} is used.  If \arg{stream} is a stream that is not an
+interactive stream, then \cl{with-input-editing} is equivalent to \cl{progn}.
 
 \arg{input-sensitizer}, if supplied, is a function of two arguments, a stream
 and a continuation function; the function has dynamic extent.  The continuation,
@@ -185,19 +186,30 @@ list, the printed representation of the object will be inserted into the input
 buffer using \cl{presentation-replace-input}.
 
 
-\Defmacro {with-input-editor-typeout} {(\optional stream) \body body}
+\Defmacro {with-input-editor-typeout} {(\optional stream \key erase) \body body} 
 
 Establishes a context inside of \cl{with-input-editing} in which output can be
-done by \arg{body} to the input editing stream \arg{stream}.
-\cl{with-input-editor-typeout} should call \cl{fresh-line} before and after
-evaluating the body.  \arg{body} may have zero or more declarations as its first
-forms.
+done by \arg{body} to the input editing stream \arg{stream}.  If \arg{erase} is
+\term{true}, the area underneath the typeout will be erased before the typeout
+is done.  \cl{with-input-editor-typeout} should call \cl{fresh-line} before and
+after evaluating the body.  \arg{body} may have zero or more declarations as its
+first forms.
 
 The \arg{stream} argument is not evaluated, and must be a symbol that is bound
-to a stream.  If \arg{stream} is \cl{t} (the default), \cl{*query-io*} is used.
-If \arg{stream} is a stream that is not an input editing stream, then
+to a stream.  If \arg{stream} is \cl{t} (the default), \cl{*standard-input*} is
+used.  If \arg{stream} is a stream that is not an input editing stream, then
 \cl{with-input-editor-typeout} is equivalent to calling \cl{fresh-line},
 evaluating the body, and then calling \cl{fresh-line} again.
+
+\Defgeneric {input-editor-format} {stream format-string \rest format-args}
+
+This function is like \cl{format}, except that it is intended to be called on
+input editing streams.  It arranges to insert ``noise strings'' in the input
+editor's input buffer.  Programmers can use this to display in-line prompts in
+\cl{accept} methods.
+
+If \arg{stream} is a stream that is not an input editing stream, then
+\cl{input-editor-format} is equivalent to \cl{format}.
 
 
 \subsection {The Input Editing Stream Protocol}
@@ -282,13 +294,15 @@ Indicates that a rescan operation on the \term{input editing stream}
 \arg{stream} should take place after the next non-input editing gesture is read
 by setting the ``rescan queued'' flag to \term{true}.
 
-\Defgeneric {rescan-if-necessary} {stream}
+\Defgeneric {rescan-if-necessary} {stream \optional inhibit-activation} 
 
 Invokes a rescan operation on the \term{input editing stream} \arg{stream} if
 \cl{queue-rescan} was called on the same stream and no intervening rescan
 operation has taken place.  Resets the state of the ``rescan queued'' flag to
 \term{false}.
 
+If \arg{inhibit-activation} is \term{false}, the input line will not be
+activated even if there is an activation character in it.
 
 \Defgeneric {erase-input-buffer} {stream \optional (start-position \cl{0})}
 
@@ -333,8 +347,8 @@ maintaining the scan pointer.
 An implementation of the input editor should provide a set of generally useful
 input editing commands.  The exact set of these commands is unspecified, and the
 key bindings for these commands may vary from platform to platform.  The
-following is a suggested set of input editing commands and key bindings, taken
-roughly from EMACS.
+following is a suggested minimum set of input editing commands and key bindings,
+taken roughly from EMACS.
 
 \begin{tabular}{|l|l|}
 \hline
@@ -376,6 +390,15 @@ Furthermore, the accumulated numeric argument should be passed to the command
 processor in such a way that \cl{substitute-numeric-argument-marker} can be used
 to insert the numeric argument into a command that was read via a keystroke
 accelerator.
+
+\Defun {add-input-editor-command} {gestures function}
+
+Adds an input editing command that causes \arg{function} to be executed when the
+specified gesture(s) are typed by the user.  \arg{gestures} is either a single
+gesture name, or a list of gesture names.  When \arg{gestures} is a sequence of
+gesture names, the function is executed only after all of the gestures are typed
+in order with no intervening gestures.  (This is used to implement ``prefixed''
+commands, such as the {\tt control-X control-F} command one might fix in EMACS.)
 
 
 \section {Activation and Delimiter Gestures}
@@ -457,7 +480,11 @@ otherwise returns \term{false}.
 \Deferror {simple-parse-error}
 
 The error that is signalled by \cl{simple-parse-error}.  This is a subclass of
-\cl{parse-error}.
+\cl{parse-error}.  
+
+This condition handles two initargs, \cl{:format-string} and
+\cl{:format-arguments}, which are used to specify a control string and arguments
+for a call to \cl{format}.
 
 \Defun {simple-parse-error} {format-string \rest format-arguments}
 
@@ -468,6 +495,9 @@ return.  \arg{format-string} and \arg{format-args} are as for \cl{format}.
 
 The error that is signalled by \cl{input-not-of-required-type}.  This is a
 subclass of \cl{parse-error}.
+
+This condition handles two initargs, \cl{:string} and \cl{:type}, which specify
+a string to be used in an error message and the expected presentation type.
 
 \Defun {input-not-of-required-type} {object type}
 
@@ -660,8 +690,16 @@ issues a possibility gesture (a gesture that matches one of the gesture names in
 \cl{*possibilities-gestures*}).
 
 
+\Defcondition {simple-completion-error}
+
+The error that is signalled by \cl{complete-input} when no completion is found.
+This is a subclass of \cl{simple-parse-error}.
+
+
 \Defmacro {completing-from-suggestions} {(stream
-                                          \key partial-completers allow-any-input possibility-printer) 
+                                          \key partial-completers allow-any-input
+                                               possibility-printer
+                                               (help-displays-possibilities \cl{t}))
                                          \body body}  
 
 Reads input from the \term{input editing stream} \arg{stream}, completing over a
@@ -672,7 +710,8 @@ set of possibilities generated by calls to \cl{suggest} within \arg{body}.
 \arg{success}, and \arg{string}
 
 The \arg{stream} argument is not evaluated, and must be a symbol that is bound
-to a stream.  If \arg{stream} is \cl{t} (the default), \cl{*query-io*} is used.
+to a stream.  If \arg{stream} is \cl{t} (the default), \cl{*standard-input*} is
+used.
 
 \arg{partial-completers}, \arg{allow-any-input}, and \arg{possibility-printer}
 are as for \cl{complete-input}.
