--- a/specs/panes.tex
+++ b/specs/panes.tex
@@ -30,17 +30,16 @@ application specific information.  CLIM provides a number of these
 graphics and extended stream facilities.
 
 \concept{Abstract panes} are panes that are defined only in terms of their
-programmer interface, or behavior.  The protocol for an abstract pane (that
-is, the specified set of initialization options, accessors, and callbacks) is
-designed to specify the pane in terms of its overall purpose, rather then in
-terms of its specific appearance or particular interactive details.  The
-purpose of this abstract definition is to allow multiple implementations of
-the abstract pane, each defining its own specific look and feel.  CLIM can
-then select the appropriate pane implementation based on factors outside the
-control of the application, such as user preferences or the look and feel of
-the host operating environment.  A subset of the abstract panes, the
-\term{adaptive panes}, have been defined to integrate well across all CLIM
-operating platforms.
+programmer interface, or behavior.  The protocol for an abstract pane (that is,
+the specified set of initargs, accessors, and callbacks) is designed to specify
+the pane in terms of its overall purpose, rather then in terms of its specific
+appearance or particular interactive details.  The purpose of this abstract
+definition is to allow multiple implementations of the abstract pane, each
+defining its own specific look and feel.  CLIM can then select the appropriate
+pane implementation based on factors outside the control of the application,
+such as user preferences or the look and feel of the host operating environment.
+A subset of the abstract panes, the \term{adaptive panes}, have been defined to
+integrate well across all CLIM operating platforms.
 
 CLIM provides a general mechanism for automatically selecting the particular
 implementation of an abstract pane selected by an application based on the
@@ -49,7 +48,7 @@ mechanism by using the name of a specific pane implementation in place of the
 abstract pane name when specifying the application frame's layout.  By
 convention, the name of the basic, portable implementation of an abstract pane
 class can be determined by adding the suffix ``\cl{-pane}'' to the name of the
-abstract class.
+abstract pane class.
 
 
 \section {Basic Pane Construction}
@@ -92,19 +91,29 @@ layout protocols.
 
 All of the subclasses of \cl{pane} are mutable.
 
-\Defun {panep} {object}
+\Defpredicate {panep} {object}
 
 Returns \term{true} if \arg{object} is a \term{pane}, otherwise returns
 \term{false}.
+
+\Defclass {basic-pane}
+
+The basic class on which all CLIM panes are built, a subclass of \cl{pane}.
+\AbstractClass
+
 
 \Defun {make-pane} {abstract-class-name \rest initargs}
 
 Selects a class that implements the behavior of the abstract pane
 \arg{abstract-class-name} and constructs a pane of that class.  \cl{make-pane}
-must be used either within the dynamic scope of a call to
+must be used either within the scope of a call to
 \cl{with-look-and-feel-realization}, or within the \cl{:pane} or \cl{:panes}
 options of a \cl{define-application-frame} (which implicitly invokes
 \cl{with-look-and-feel-realization}).
+
+It is permitted for this function to have lexical scope, and be defined only
+within the body of \cl{with-look-and-feel-realization}.
+
 
 \Defgeneric {make-pane-1} {realizer frame abstract-class-name \rest initargs}
 
@@ -129,7 +138,7 @@ is uses its own subpanes to achieve its functionality, this form might be used
 with \arg{realizer} being the pane itself.
 
 
-\subsection {Pane Initialization Options}
+\subsection {Pane Initialization Options \label{pane-init}}
 
 The following options must be accepted by all pane classes.
 
@@ -137,17 +146,22 @@ The following options must be accepted by all pane classes.
 \Defoption {:background}
 
 These options specify the default foreground and background inks for a pane.
+These will normally default from window manager resources.  If there are no such
+resources, the defaults are black and white, respectively.
+
 Client code should be cautious about passing values for these two options, since
-the desktop's look and feel or the user's preferences should usually determine
-these values.
+the window manager's look and feel or the user's preferences should usually
+determine these values.
 
 \Defoption {:text-style}
 
 This option specifies the default text style that should be used for any sort of
 pane that supports text output.  Panes that do not support text output ignore
-this option.  Client code should be cautious about passing values for this
-option, since the desktop's look and feel or the user's preferences should
-usually determine this value.
+this option.
+
+Client code should be cautious about passing values for this option, since the
+window manager's look and feel or the user's preferences should usually
+determine this value.
 
 \Defoption {:name}
 
@@ -168,12 +182,13 @@ hierarchy.
 Returns the name of the pane.
 
 \defgeneric {pane-foreground} {pane}
-\Defgeneric {pane-background} {pane}
+\defgeneric {pane-background} {pane}
+\Defgeneric {pane-text-style} {pane}
 
-Return the current foreground and background inks of the pane, respectively.
-
-\issue {SWM} {Why aren't these \cl{medium-foreground} and
-\cl{medium-background}, since panes obey the medium protocol to this extent?}
+Return the default foreground and background inks and the default text style,
+respectively, for the pane \arg{pane}.  These will be used as the default value
+for \cl{medium-foreground} and \cl{medium-background} when a medium is grafted
+to the pane.
 
 
 \section {Composite and Layout Panes}
@@ -272,11 +287,14 @@ both the $x$ and $y$ spacing simultaneously.
 \subsection {Layout Pane Classes}
 
 \deflpane {hbox-pane}
-\Defmacro {horizontally} {(\rest options) \body contents}
+\Defmacro {horizontally} {(\rest options \key spacing \allow) \body contents}
 
 The \cl{hbox-pane} class lays out all of its child panes horizontally, from left
-to right.  The \cl{horizontally} macro serves as a convenient interface for
-creating an \cl{hbox-pane}.
+to right.  The child panes are separated by the amount of space specified by
+\arg{spacing}.
+
+The \cl{horizontally} macro serves as a convenient interface for creating an
+\cl{hbox-pane}.
 
 \arg{contents} is one or more forms that are the child panes.  Each form in
 \arg{contents} is of the form:
@@ -309,11 +327,14 @@ one-third of the space, then second takes two-thirds of the space.
 
 
 \deflpane {vbox-pane}
-\Defmacro {vertically} {(\rest options) \body contents}
+\Defmacro {vertically} {(\rest options \key spacing \allow) \body contents} 
 
 The \cl{vbox-pane} class lays out all of its child panes vertically, from top to
-bottom.  The \cl{vertically} macro serves as a convenient interface for creating
-an \cl{vbox-pane}.
+bottom.  The child panes are separated by the amount of space specified by
+\arg{spacing}.
+
+The \cl{vertically} macro serves as a convenient interface for creating an
+\cl{vbox-pane}.
 
 \arg{contents} is as for \cl{horizontally}.
 
@@ -356,18 +377,19 @@ A \cl{grid-pane} is like a \cl{table-pane}, except that each cell is the same
 size in each of the two dimensions.
 
 
-\deflpane {spacer-pane}
-\Defmacro {spacing} {(\rest options) \body contents}
+\deflpane {spacing-pane}
+\Defmacro {spacing} {(\rest options \key thickness \allow) \body contents} 
 
-This pane reserves some margin space around a single child pane.  The space
-requirement keys that are passed in indicate the requirements for the
-surrounding space, not including the requirements of the child.
+This pane reserves some margin space of thickness \arg{thickness} around a
+single child pane.  The space requirement keys that are passed in indicate the
+requirements for the surrounding space, not including the requirements of the
+child.
 
 
-\deflpane {border-pane}
-\Defmacro {bordering} {(\rest options) \body contents}
+\deflpane {outlined-pane}
+\Defmacro {outlining} {(\rest options \key thickness \allow) \body contents} 
 
-This layout pane puts a border around its contents.
+This layout pane puts a outline of thickness \arg{thickness} around its contents.
 
 The \cl{:background} option can be used to control the ink used to draw the
 background.
@@ -388,7 +410,17 @@ A pane that allows its children to be any size and lays them out wherever they
 want to be (for example, a desktop manager).
 
 
-\subsection {Other Composite Pane Classes}
+\defspane {label-pane}
+\Defmacro {labelling} {(\rest options \key label label-alignment \allow)
+                       \body contents}
+
+Creates a pane that consists of the specified label \arg{label}, which is a
+string.  \arg{label-alignment} may be either \cl{:bottom} or \cl{:top}, which
+specifies whether the label should appear at the top or the bottom of the
+labelled pane.  The default for \arg{label-alignment} is left unspecified.
+
+
+\subsection {Scroller Pane Classes}
 
 CLIM defines the following additional pane classes, each having at least one
 implementation.
@@ -409,21 +441,28 @@ has as children the scroll bars and a \concept{viewport}.  The viewport of a
 pane is the area of the window's drawing plane that is currently visible to the
 user.  The viewport has as its child the specified contents.
 
-\issue {SWM} {Supply the following four definitions.}
-
 \Defgeneric {pane-viewport} {pane}
+
+If the pane \arg{pane} is part of a scroller pane, this returns the viewport
+pane for \arg{pane}.  Otherwise it returns \cl{nil}.
 
 \Defgeneric {pane-viewport-region} {pane}
 
+If the pane \arg{pane} is part of a scroller pane, this returns the region of
+the pane's viewport.  Otherwise it returns \cl{nil}.
+
 \Defgeneric {pane-scroller} {pane}
+
+If the pane \arg{pane} is part of a scroller pane, this returns the scroller
+pane itself.  Otherwise it returns \cl{nil}.
 
 \Defgeneric {scroll-extent} {pane x y}
 
+If the pane \arg{pane} is part of a scroller pane, this scrolls the pane in its
+viewport so that the position $(x,y)$ of \arg{pane} is at the upper-left corner
+of the viewport.  Otherwise, it does nothing.
 
-\defspane {label-pane}
-\Defmacro {labelled} {(\rest options) \body contents}
-
-Creates a pane that consists of the specified label, which is a string.
+\arg{x} and \arg{y} are coordinates.
 
 
 \subsection {The Layout Protocol\label{layout-protocol}}
@@ -477,6 +516,94 @@ above which the pane cannot be grown.  (The minimum and maximum sizes can also
 be specified as relative amounts.)  All sizes are specified as a real number
 indicating the number of device units (such as pixels).
 
+
+\Defclass {space-requirement}
+
+The protocol class of all space requirement objects.  There are one or more
+subclasses of \cl{space-requirement} with implementation-dependent names that
+implement space requirements.  The exact names of these classes is explicitly
+unspecified.  
+\IfYouWantClass {a} {space requirement} {space-requirement}
+
+All of the instantiable space requirement classes provided by CLIM are
+immutable.
+
+
+\Defun {make-space-requirement} {\key (width \cl{0}) (max-width \cl{0}) (min-width \cl{0})
+                                      (height \cl{0}) (max-height \cl{0}) (min-height \cl{0})}
+
+Constructs a space requirement object with the given characteristics, \cl{:width},
+\cl{:height}, and so on.
+
+\defgeneric {space-requirement-width}             {space-req}
+\defgeneric {space-requirement-min-width}         {space-req}
+\defgeneric {space-requirement-max-width}         {space-req}
+\defgeneric {space-requirement-height}            {space-req}
+\defgeneric {space-requirement-min-height}        {space-req}
+\Defgeneric {space-requirement-max-height}        {space-req}
+
+These functions read the components of the space requirement \arg{space-req}.
+
+\Defgeneric {space-requirement-components} {space-req}
+
+Returns the components of the space requirement \arg{space-req} as six values,
+the width, minimum width, maximum width, height, minimum height, and maximum
+height.
+
+\Defun {space-requirement-combine} {function sr1 sr2}
+
+Returns a new space requirement each of whose components is the result of
+applying the function \arg{function} to each the components of the two space
+requirements \arg{sr1} and \arg{sr2}.
+
+\arg{function} is a function of two arguments, both of which are real numbers.
+It has dynamic extent.
+
+\Defun {space-requirement+} {sr1 sr2}
+
+Returns a new space whose components are the sum of each of the components of
+\arg{sr1} and \arg{sr2}.  This could be implemented as follows:
+
+\begin{verbatim}
+(defun space-requirement+ (sr1 sr2)
+  (space-requirement-combine #'+ sr1 sr2))
+\end{verbatim}
+
+\Defun {space-requirement+*} {space-req \key width min-width max-width
+                                             height min-height max-height}
+                             
+Returns a new space requirement whose components are the sum of each of the
+components of \arg{space-req} added to the appropriate keyword argument (for
+example, the width component of \arg{space-req} is added to \arg{width}).
+
+This is intended to be a more efficient, ``spread'' version of
+\cl{space-requirement+}.
+
+
+\Defgeneric {compose-space} {pane \key width height} 
+
+During the space composition pass, a composite pane will typically ask each of
+its children how much space it requires by calling \cl{compose-space}.  They
+answer by returning \cl{space-requirement} objects.  The composite will then
+form its own space requirement by composing the space requirements of its
+children according to its own rules for laying out its children.
+
+The value returned by \cl{compose-space} is a space requirement object that
+represents how much space the pane \arg{pane} requires.
+
+\arg{width} and \arg{height} are real numbers that the \cl{compose-space} method
+for a pane may use as ``recommended'' values for the width and height of the
+pane.  These are used to drive top-down layout.
+
+\Defgeneric {allocate-space} {pane width height}
+
+During the space allocation pass, a composite pane will arrange its children
+within the available space and allocate space to them according to their space
+requirements and its own composition rules by calling \cl{allocate-space} on
+each of the child panes.  \arg{width} and \arg{height} are the width and height
+of \arg{pane} in device units.
+
+
 \Defgeneric {change-space-requirements} {pane \key resize-frame \rest space-req-keys} 
 
 This function can be invoked to indicate that the space requirements for
@@ -503,7 +630,7 @@ cases that \cl{layout-frame} isn't invoked.  In the case that \cl{layout-frame}
 is invoked, it isn't necessary to call \cl{note-space-requirements-changed}
 since a complete re-layout of the frame will be executed.
 
-\Defmacro {changing-space-requirements} {(\key resize-frame) \body body}
+\Defmacro {changing-space-requirements} {(\key resize-frame layout) \body body}
 
 This macro supports batching the invocation of the layout protocol by calls
 to \cl{change-space-requirements}.  Within the body, all calls to
@@ -513,62 +640,22 @@ appropriately.  \arg{body} may have zero or more declarations as its first
 forms.
 
 
-\Defgeneric {compose-space} {pane}
-
-During the space composition pass, a composite pane will typically ask each of
-its children how much space it requires by calling \cl{compose-space}.  They
-answer by returning \cl{space-requirement} objects.  The composite will then
-form its own space requirement by composing the space requirements of its
-children according to its own rules for laying out its children.
-
-\Defgeneric {allocate-space} {pane width height}
-
-During the space allocation pass, a composite pane will arrange its children
-within the available space and allocate space to them according to their space
-requirements and its own composition rules by calling \cl{allocate-space} on
-each of the child panes.  \arg{width} and \arg{height} are the width and height
-of \arg{pane} in device units.
-
-
-\Defun {make-space-requirement} {\key (width \cl{0}) (max-width \cl{0}) (min-width \cl{0})
-                                      (height \cl{0}) (max-height \cl{0}) (min-height \cl{0})}
-
-Constructs a space requirement object with the given characteristics, \cl{:width},
-\cl{:height}, and so on.
-
-\defun {space-requirement-width}             {space-req}
-\defun {(setf space-requirement-width)}      {size space-req}
-\defun {space-requirement-max-width}         {space-req}
-\defun {(setf space-requirement-max-width)}  {size space-req}
-\defun {space-requirement-min-width}         {space-req}
-\defun {(setf space-requirement-min-width)}  {size space-req}
-\defun {space-requirement-height}            {space-req}
-\defun {(setf space-requirement-height)}     {size space-req}
-\defun {space-requirement-max-height}        {space-req}
-\defun {(setf space-requirement-max-height)} {size space-req}
-\defun {space-requirement-min-height}        {space-req}
-\Defun {(setf space-requirement-min-height)} {size space-req}
-
-These functions read or modify the components of the space requirement
-\arg{space-req}.
-
-
-\section {Application Panes\label{clim-panes}}
+\section {CLIM Stream Panes\label{clim-panes}}
 
 In addition to the various layout panes and gadgets, an application usually
 needs some space to display application-specific output and receive
 application-specific input from the user.  For example, a paint program needs a
 ``canvas'' pane on which to display the picture and handle the ``mouse
 strokes''.  An application frame can use the basic CLIM input and output
-services in an application-specific way through use of an \concept{application
+services in an application-specific way through use of a \concept{CLIM stream
 pane}.
 
-This section describes the basic CLIM application pane types.  Programmers are
+This section describes the basic CLIM stream pane types.  Programmers are
 free to customize pane behavior by defining subclasses of these pane classes
 writing methods to change the repaint or event-handling behavior.
 
 
-\subsection {Application Pane Options}
+\subsection {CLIM Stream Pane Options\label{clim-pane-options}}
 
 CLIM application frames accept the \cl{:foreground}, \cl{:background},
 \cl{:text-style}, and layout pane options.  The space requirement options
@@ -576,7 +663,7 @@ CLIM application frames accept the \cl{:foreground}, \cl{:background},
 \cl{:compute}, which causes CLIM to run the display function for the pane, and
 make the pane large enough to hold the output of the display function.
 
-In addition to the above, CLIM application frames accept the following options:
+In addition to the above, CLIM stream panes accept the following options:
 
 \Defoption {:display-function}
 
@@ -592,12 +679,13 @@ arguments, if any.  The default for this option is \cl{nil}.
 \Defoption {:display-time}
 
 This is used to indicate to CLIM when the pane's display function should be run.
-If it is \cl{:command-loop}, CLIM will erase the pane's contents and run the
-display function after each time a frame command is executed.  If it is \cl{t},
-the pane will be displayed once and not again until \cl{pane-needs-redisplay} is
+If it is \cl{:command-loop}, CLIM will clear the pane and run the display
+function after each time a frame command is executed.  If it is \cl{t}, the pane
+will be displayed once and not again until \cl{(setf~pane-needs-redisplay)} is
 called on the pane.  If it is \cl{nil}, CLIM will never run the display function
 until it is explicitly requested, either via \cl{pane-needs-redisplay} or
-\cl{redisplay-frame-pane}.  The default for this option varies.
+\cl{redisplay-frame-pane}.  The default for this option varies depending on the
+type of the pane.
 
 \Defoption {:incremental-redisplay}
 
@@ -622,18 +710,24 @@ These options specify the end-of-line and end-of-page actions to be used for the
 pane.  The default for these options are \cl{:wrap} and \cl{:scroll},
 respectively.
 
-\Defoption {:output-history}
+\Defoption {:output-record}
 
-This option names the class to be used for the output history for the pane.  The
-default is \cl{standard-tree-output-history}.
+This option names the output record class to be used for the output history of
+the pane.  The default is \cl{standard-tree-output-history}.
+
+\defoption {:draw}
+\Defoption {:record}
+
+These options specify whether the pane should initially allow drawing and output
+recording.  The default for both options is \cl{t}.
 
 
-\subsection {Application Pane Classes}
+\subsection {CLIM Stream Pane Classes}
 
 \Defspane {clim-stream-pane}
 
 This class implements a pane that supports the CLIM graphics, extended input and
-output, and output recording protocols.  Most application panes will be
+output, and output recording protocols.  Most CLIM stream panes will be
 subclasses of this class.
 
 \Defspane {interactor-pane}
@@ -678,23 +772,35 @@ For \cl{pointer-documentation-pane}, the default for \cl{:display-time} is
 \cl{nil} and the default for \cl{:scroll-bars} is \cl{nil}.
 
 
-\subsection {Making CLIM Application Panes}
+\subsection {Making CLIM Stream Panes}
 
-Most CLIM application panes will contain more information than can be displayed
+Most CLIM stream panes will contain more information than can be displayed
 in the allocated space, so scroll bars are nearly always desirable.  CLIM
 therefore provides a convenient form for creating composite panes that include
 the CLIM stream pane, scroll bars, labels, and so forth.
 
-\Defun {make-clim-stream-pane} {\rest options \key type label scroll-bars \allow}
+\Defun {make-clim-stream-pane} {\rest options 
+                                \key type label label-alignment scroll-bars borders
+                                     display-after-commands \allow} 
 
-Creates a pane of type \arg{type}, which defaults to \cl{clim-stream-pane}.  If
-\arg{label} is supplied, it is a string used to label the pane.
+Creates a pane of type \arg{type}, which defaults to \cl{clim-stream-pane}.
+
+If \arg{label} is supplied, it is a string used to label the pane.
+\arg{label-alignment} is as for the \cl{labelling} macro.
+
 \arg{scroll-bars} may be \cl{t} to indicate that both vertical and horizontal
 scroll bars should be included, \cl{:vertical} (the default) to indicate that
 vertical scroll bars should be included, or \cl{:horizontal} to indicate that
 horizontal scroll bars should be included.
 
-The other options may include all of the valid CLIM application pane options.
+If \arg{borders} is \term{true}, the default, a border is drawn around the pane.
+
+\arg{display-after-commands} is used to initialize the \cl{:display-time}
+property of the pane.  It may be \cl{t} (for \cl{:display-time :command-loop}),
+\cl{:no-clear} (for \cl{:display-time :no-clear}), or \cl{nil} (for
+\cl{:display-time nil}).
+
+The other options may include all of the valid CLIM stream pane options.
 
 \Defun {make-clim-interactor-pane} {\rest options}
 
@@ -707,7 +813,7 @@ Like \cl{make-clim-stream-pane}, except that the type is forced to be
 \cl{application-pane}.
 
 
-\subsection {CLIM Application Pane Functions}
+\subsection {CLIM Stream Pane Functions}
 
 The following functions can be called on any pane that is a subclass of
 \cl{clim-stream-pane}.  (Such a pane is often simply referred to as a
@@ -728,8 +834,11 @@ output records in the visible part of the window are replayed.
 
 \Defgeneric {window-viewport} {window}
 
-Returns the viewport region of the CLIM stream pane \arg{window}.  The returned
-region will usually be a \cl{standard-bounding-rectangle}.
+Returns the viewport region of the CLIM stream pane \arg{window}.  If the window
+is not scrollable, and hence has no viewport, this will region \cl{sheet-region}
+of \arg{window}.
+
+The returned region will generally be a \cl{standard-bounding-rectangle}.
 
 \Defgeneric {window-erase-viewport} {window}
 
@@ -739,19 +848,75 @@ Clears the visible part of the drawing plane of the CLIM stream pane
 \Defgeneric {window-viewport-position} {window}
 
 Returns two values, the $x$ and $y$ position of the top-left corner of the CLIM
-stream pane \arg{window}'s viewport.
+stream pane \arg{window}'s viewport.  If the window is not scrollable, this will
+return the two values 0 and 0.
 
 \Defgeneric {(setf* window-viewport-position)} {x y window}
 
 Sets the position of the CLIM stream pane \arg{window}'s viewport to \arg{x} and
-\arg{y}.
+\arg{y}.  If the window is not scrollable, this will do nothing.
+
+For CLIM implementations that do not support \cl{setf*}, the ``setter'' function
+for this is \cl{window-set-viewport-position}.
+
+
+\subsection {Creating a Standalone CLIM Window}
+
+The following function can be used to create a standalone window that obeys
+CLIM's extended input and output stream and output recording protocols.
+
+\Defun {open-window-stream} {\key port left top right bottom width height
+                                  foreground background text-style
+                                  (vertical-spacing \cl{2})
+                                  end-of-line-action end-of-page-action
+                                  output-record (draw \cl{t}) (record \cl{t})
+                                  (initial-cursor-visibility \cl{:off})
+                                  text-margin save-under input-buffer
+                                  (scroll-bars \cl{:vertical}) borders label}
+
+Creates and returns a sheet that can be used as a standalone window that obeys
+CLIM's extended input and output stream and output recording protocols.
+
+The window will be created on the port \arg{port} at the position specified by
+\arg{left} and \arg{top}, which default to 0.  \arg{right}, \arg{bottom},
+\arg{width}, and \arg{height} default in such a way that the default width will
+be 100 and the default height will be 100.
+
+\arg{foreground}, \arg{background}, and \arg{text-style} are used to specify the
+window's default foreground and background inks, and text style.
+\arg{vertical-spacing}, \arg{text-margin}, \arg{end-of-line-action},
+\arg{end-of-page-action}, \arg{output-record}, \arg{draw}, and \arg{record} are
+described in Section~\ref{clim-pane-options}.
+
+\arg{scroll-bars} specifies whether scroll bars should be included in the
+resulting window.  It may be one of \arg{nil}, \cl{:vertical} (the default),
+\cl{:horizontal}, or \cl{:both}.
+ 
+\arg{borders} is a booleans that specifies whether or not the resulting window
+should have a border drawn around it.  The default is \cl{t}.  \arg{label} is
+either \cl{nil} or a string to use as a label for the window.
+
+\arg{initial-cursor-visibility} is used to specify whether the window should
+have a text cursor.  \cl{:off} (the default) means to make the cursor visible if
+the window is waiting for input.  \cl{:on} means to make the cursor visible
+immediately.  \cl{nil} means the cursor will not be visible at all.
+
+When \arg{save-under} is \term{true}, the result window will be given a ``bit
+save array''.  The default is \cl{nil}.
+
+If \cl{input-buffer} is supplied, it is an input buffer or event queue to use
+for the resulting window.  Programmers will generally supply this when they want
+the new window to share its input buffer with an existing application.  The
+default is to create a new input buffer.
 
 
 \section {Defining New Pane Types}
 
-This section describes how to define new pane classes.
+This section describes how to define new pane classes.  The first section shows
+a new kind of leaf pane (an odd kind of push-button).  The second section shows
+a new composite pane that draws a dashed border around its contents.
 
-\subsection {Defining Leaf Panes}
+\subsection {Defining a New Leaf Pane}
 
 To define a gadget pane implementation, first define the appearance and layout
 behavior of the gadget, then define the callbacks, then define the specific user
@@ -761,26 +926,31 @@ For example, to define an odd new kind of button that displays itself as a
 circle, and activates whenever the mouse is moved over it, proceed as follows:
 
 \begin{verbatim}
-;; A new kind of button
-(defclass sample-button-pane (gadget-pane) ())
+;; A new kind of button.
+(defclass sample-button-pane
+          (action-gadget
+           space-requirement-mixin
+           leaf-pane)
+    ())
 
-;; An arbitrary size parameter
+;; An arbitrary size parameter.
 (defparameter *sample-button-radius* 10)
 
 ;; Define the sheet's repaint method to draw the button.
-(defmethod handle-repaint ((button sample-button-pane) region 
-                           &key medium &allow-other-keys)
-  (let ((radius *sample-button-radius*)
-        (half (round  *sample-button-radius* 2)))
-    ;; Larger circle with small one in the center.
-    (draw-circle* medium radius radius radius
-                  :filled nil)
-    (draw-circle* medium radius radius half
-                  :filled t)))
+(defmethod handle-repaint ((button sample-button-pane) region)
+  (with-sheet-medium (medium button)
+    (let ((radius *sample-button-radius*)
+          (half (round  *sample-button-radius* 2)))
+      ;; Larger circle with small one in the center
+      (draw-circle* medium radius radius radius
+                    :filled nil)
+      (draw-circle* medium radius radius half
+                    :filled t)))
 
-;;; Define the pane's compose-space method to always request the
-;;; fixed size of the pane.
-(defmethod compose-space ((pane sample-button-pane))
+;; Define the pane's compose-space method to always request the
+;; fixed size of the pane.
+(defmethod compose-space ((pane sample-button-pane) &key width height)
+  (declare (ignore width height))
   (make-space-requirement :width  (* 2 *sample-button-radius*)
                           :height (* 2 *sample-button-radius*)))
 \end{verbatim}
@@ -794,20 +964,71 @@ interaction that triggers them.
 
 \begin{verbatim}
 ;; This default method is defined so that the callback can be invoked
-;; on an arbitrary client value without error.
-(defmethod value-change-callback
-           ((button sample-button-pane) client id value)
+;; on an arbitrary client without error.
+(defmethod activate-callback
+           ((button sample-button-pane) client id)
   (declare (ignore client id value)))
 
 ;; This event processing method defines the rather odd interaction
-;; style of this button, to whit: it triggers the activate callback
+;; style of this button, to wit, it triggers the activate callback
 ;; whenever the mouse moves into it.
-(defmethod enter-region ((pane sample-button-pane) &key &allow-other-keys)
-  (value-change-callback pane (gadget-client pane) (gadget-id pane) nil))
+(defmethod handle-event ((pane sample-button-pane) (event pointer-enter-event))
+  (activate-callback pane (gadget-client pane) (gadget-id pane)))
 \end{verbatim}
 
 
-\subsection {Defining Composite Panes} 
+\subsection {Defining a New Composite Pane} 
 
-\issue {ILA} {To be supplied.}
+To define a new layout pane implementation, the programmer must define how the
+much space the pane takes, where its children go, and what the pane looks like.
 
+For example, to define a new kind of border pane that draws a dashed border
+around its child pane, proceed as follows:
+
+\begin{verbatim}
+;; The new layout pane class.
+(defclass dashed-border-pane (layout-pane)
+    ((thickness :initform 1 :initarg :thickness))
+  (:default-initargs :background +black+))
+
+;; The specified contents are the sole child of the pane.
+(defmethod initialize-instance :after ((pane dashed-border-pane) &key contents)
+  (sheet-adopt-child pane contents))
+
+;; The composite pane takes up all of the space of the child, plus
+;; the space required for the border.
+(defmethod compose-space ((pane dashed-border-pane) &key width height)
+  (let ((thickness (slot-value pane 'thickness))
+        (child (sheet-child pane)))
+    (space-requirement+
+      (compose-space child :width width :height height)
+      (make-space-requirement 
+        :width (* 2 thickness)
+        :height (* 2 thickness)))))
+
+;; The child pane is positioned just inside the borders.
+(defmethod allocate-space ((pane dashed-border-pane) width height)
+  (let ((thickness (slot-value pane 'thickness)))
+    (move-and-resize-sheet
+      (sheet-child pane)
+      thickness thickness
+      (- width (* 2 thickness)) (- height (* 2 thickness)))))
+  
+(defmethod handle-repaint ((pane dashed-border-pane) region)
+  (declare (ignore region))                     ;not worth checking
+  (with-sheet-medium (medium pane)
+    (with-bounding-rectangle* (left top right bottom) (sheet-region pane)
+      (let ((thickness (slot-value pane 'thickness)))
+        (decf right (ceiling thickness 2))
+        (decf bottom (ceiling thickness 2))
+        (draw-rectangle* medium left top right bottom
+                         :line-thickness thickness :filled nil
+                         :ink (pane-background pane))))))
+
+(defmacro dashed-border ((&rest options &key thickness &allow-other-keys)
+                         &body contents)
+  (declare (ignore thickness))
+  `(make-pane 'dashed-border-pane
+     :contents ,@contents
+     ,@options))
+\end{verbatim}
